--- a/src/styles/operaciones/Operaciones.css
+++ b/src/styles/operaciones/Operaciones.css
@@ -1,5 +1,5 @@
 .operaciones-page {
-    margin-top: 120px; /* espacio por navbar fijo */
+    margin-top: 100px; /* espacio por navbar fijo */
     padding: 20px;
     color: white;
     font-family: 'Poppins', sans-serif;
@@ -7,18 +7,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;  /* centra el contenido */
-}
-
-/* Header con título y botón */
-.operaciones-header {
-    display: flex;
-    justify-content: space-between; /* título a la izq, botón a la der */
-    align-items: center;
-    width: 100%;
-    max-width: 900px;   /* ancho máximo como el filtro */
-    margin-bottom: 30px;
-    margin-left: auto;  /* centra el bloque */
-    margin-right: auto;
 }
 
 .operaciones-header h1 {
@@ -41,8 +29,8 @@
     font-size: 14px;
     transition: background 0.3s ease;
 
-    margin-left: 1400px;   /* 🔥 mueve un poco hacia la derecha */
-    margin-bottom: 80px; /* 🔥 espacio debajo */
+    margin-left: 1390px; 
+    margin-bottom: 10px; 
 }
 
 .btn-add:hover {
@@ -90,6 +78,12 @@
     background-color: #1f283d;
     color: white;
     font-size: 14px;
+}
+
+.filter-group select:focus {
+    outline: none; /* Elimina el outline en foco */
+    border: none; /* Asegura que no haya borde */
+    box-shadow: none; /* Elimina cualquier sombra */
 }
 
 /* Botón buscar */
