operaciones terminado, cambios en modal y persona

--- a/src/styles/gastos/Gastos.css
+++ b/src/styles/gastos/Gastos.css
@@ -190,7 +190,7 @@
 .botones-agreyexpo{
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-end !important;
     margin: 0;
 }
 
